--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="wrapper">
         <img src="./assets/desktop/logo.svg" alt="pod-logo" class="pod-logo">
         <div class="card">
+                <div class="landscape-padder"></div>
+                <img src="./assets/desktop/logo.svg" alt="pod-logo" class="pod-logo2">
                 <p class="header">PUBLISH YOUR PODCASTS <span>EVERYWHERE.</span></p>
                 <p class="paragraph">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
                 <div class="mail-button">
